cp: 	PR c++/21799 	* pt.c (type_unification_real): Add is_method argument.  Use it 	for this pointer unification. 	(fn_type_unification): Adjust type_unification_real call. 	(unify): Likewise. testsuite: 	PR c++/21799 	* g++.dg/template/unify8.C: New. 	* g++.dg/template/unify9.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@101760 138bc75d-0d04-0410-961f-82ee72b054a4